--- a/MSFS.MEI/appsettings.json
+++ b/MSFS.MEI/appsettings.json
@@ -8,16 +8,13 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
-      "Http": {
-        "Url": "http://0.0.0.0:42098"
-      },
       "Https": {
         "Url": "https://0.0.0.0"
       }
     },
     "Certificates": {
       "Default": {
-        "Path": "C:\\Program Files\\MSFS2020 Map Enhancement\\resources\\core\\release\\msfs2020-server-cert.pfx",
+        "Path": "./msfs2020-server-cert.pfx",
         "Password": "password"
       }
     }
