--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,4 +25,5 @@ jobs:
     - name: Build
       run: dotnet build --no-restore -c Release --self-contained
     - name: Publish
-      run: dotnet publish -o ./output --runtime win10-x64 --self-contained
+      run: dotnet publish -o ./output --runtime win10-x64 --self-contained --source ./MSFS.MEI
+
