--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore -c Release --self-contained --runtime win10-x64 --self-contained --property PublishDir=${{env.DOTNET_ROOT}}/myapp
+      run: dotnet build -c Release --self-contained --runtime win10-x64 --self-contained --property PublishDir=${{env.DOTNET_ROOT}}/myapp
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
