--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build -c Release --self-contained --runtime win-x64 --self-contained
+      run: dotnet build -c Release --self-contained --self-contained
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
