Add support for High LOD Add reverse proxy for building generation

--- a/MSFS.MEI/appsettings.json
+++ b/MSFS.MEI/appsettings.json
@@ -1,8 +1,14 @@
 {
+  "MEIConfig": {
+    "HighLODEnabled": true,
+    //"ImageServerURL": "https://mt.google.com/vt/lyrs=s?x={0}&y={1}&z={2}"
+    "ImageServerURL": "https://khms2.google.com/kh/v=945?x={0}&y={1}&z={2}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Yarp": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -16,6 +22,81 @@
       "Default": {
         "Path": "./msfs2020-server-cert.pfx",
         "Password": "password"
+      }
+    }
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "route1": {
+        "ClusterId": "khstorelive.azureedge.net",
+        "Order": 100,
+        "Match": {
+          "Path": "{**catch-all}",
+          "Hosts": [ "khstorelive.azureedge.net" ]
+        },
+        "Transforms": [
+          { "RequestHeadersCopy": "true" },
+          { "RequestHeaderOriginalHost": "true" }
+        ]
+      },
+      "route2": {
+        "ClusterId": "kh.ssl.ak.tiles.virtualearth.net",
+        "Order": 100,
+        "Match": {
+          "Path": "{**catch-all}",
+          "Hosts": [ "kh.ssl.ak.tiles.virtualearth.net" ]
+        },
+        "Transforms": [
+          { "RequestHeadersCopy": "true" },
+          { "RequestHeaderOriginalHost": "true" }
+        ]
+      }
+    },
+    "Clusters": {
+      "khstorelive.azureedge.net": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls12",
+            "Tls13"
+          ],
+          "MaxConnectionsPerServer": "32",
+          "DangerousAcceptAnyServerCertificate": "true"
+        },
+        "HttpRequest": {
+          "ActivityTimeout": "00:01:00",
+          "Version": "2.0"
+        },
+        "SessionAffinity": {
+          "Enabled": "true",
+          "AffinityKeyName": "khstorelive.azureedge.net"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "https://khstorelive.afd.azureedge.net"
+          }
+        }
+      },
+      "kh.ssl.ak.tiles.virtualearth.net": {
+        "HttpClient": {
+          "SslProtocols": [
+            "Tls12",
+            "Tls13"
+          ],
+          "MaxConnectionsPerServer": "32"
+        },
+        "HttpRequest": {
+          "ActivityTimeout": "00:01:00",
+          "Version": "2.0"
+        },
+        "SessionAffinity": {
+          "Enabled": "true",
+          "AffinityKeyName": "kh.ssl.ak.tiles.virtualearth.net"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "https://t.ssl.ak.tiles.virtualearth.net"
+          }
+        }
       }
     }
   }
