--- a/MSFS.MEI/MSFS.MEI.csproj
+++ b/MSFS.MEI/MSFS.MEI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -15,11 +15,13 @@
     <AllowedReferenceRelatedFileExtensions>none</AllowedReferenceRelatedFileExtensions>
     <NoWarn>$(NoWarn);SA0001</NoWarn>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <Content Include="msfs2020-*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.0.0" />
     <Content Update="appsettings.Development.json" CopyToPublishDirectory="Never" />
   </ItemGroup>
 </Project>
