Enable Unix Support for System.Drawing

--- a/MSFS.MEI/appsettings.json
+++ b/MSFS.MEI/appsettings.json
@@ -99,5 +99,10 @@
         }
       }
     }
+  },
+  "runtimeOptions": {
+    "configProperties": {
+      "System.Drawing.EnableUnixSupport": true
+    }
   }
 }
